# AviaozinhoLauncher

./: .gitignore  CMakeLists.txt  Config.h  ConfigReader.h  Downloader.cpp  Downloader.h  Game.h  LauncherGUI.cpp  LauncherGUI.h  NetBackend.cpp  NetBackend.h  NetPipe.c  NetPipe.h  Pipe.c  Pipe.h  README.md  Registry.h  Request.h  Static.cpp  Static.h  SteamCallbacks.cpp  SteamCallbacks.h  SteamProtocol.h  Uploader.cpp  Uploader.h  WorkshopUploadDialog.cpp  WorkshopUploadDialog.h  languages.txt  resource.rc  steam_appid.txt
